tests/error/undefined_trait_method.vibe
// Test that analyzer catches undefined trait methods on generic types

trait Hash {
    fn hash(&self) -> i64
}

fn bad_call<T: Hash>(x: &T) -> i64 {
    x.undefined_method()  // ERROR: method not found
}

fn main() {
    let val: i64 = 42
    bad_call(&val)
}
